<resources>
    <string name="app_name">Sprint4</string>
    <string name="foto_perfil">foto_perfil</string>
    <string name="alex_mu_oz_vilugron">ALEX MUÑOZ VILUGRON</string>
    <string name="admin_redes_y_soporte">ADMIN. REDES Y SOPORTE</string>
    <string name="seguna_imagen">seguna imagen</string>
    <string name="whatsapp">whatsapp</string>
    <string name="linkedin">linkedin</string>
    <string name="me_puedes_contactar_por">Me puedes contactar por</string>
    <string name="name">Name</string>
    <string name="mensaje">mensaje</string>
    <string name="referencia">referencia</string>
    <string name="ir_a_whatsapp">ir a whatsapp</string>
    <string name="ir_a_linkedin">ir a linkedin</string>
    <string name="ir_a_gmail">ir a gmail</string>
    <string name="puedes_contactarme_por">PUEDES CONTACTARME POR:</string>
    <string name="escribe_tu_mensaje">ESCRIBE TU MENSAJE</string>
    <string name="enviar">Enviar</string>
</resources>