<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeconActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="345dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/seguna_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_herramientas_0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="77dp"
        android:layout_height="133dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textContact"
        app:layout_constraintTop_toBottomOf="@+id/textContact"
        app:srcCompat="@drawable/whatsapp__1_"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/whatsapp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="77dp"
        android:layout_height="133dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textContact"
        app:layout_constraintTop_toBottomOf="@+id/textContact"
        app:srcCompat="@drawable/linkedin"
        android:contentDescription="@string/linkedin" />

    <TextView
        android:id="@+id/textContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/me_puedes_contactar_por"
        android:textColor="#757373"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:drawableStart="@drawable/outline_email_24"
        android:ems="10"
        android:hint="@string/mensaje"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@id/textContact"
        android:minHeight="48dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textContact"
        app:layout_constraintVertical_bias="0.93"
        tools:ignore="LabelFor,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>